esp-now-audio-source/build/log/idf_py_stdout_output_25232
Command: ninja all
[1/12] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\ESP32-Code\esp-now-audio-source\build\bootloader\esp-idf\esptool_py && C:\Users\ngocv\.espressif\python_env\idf5.5_py3.14_env\Scripts\python.exe "D:/Bluetooth Project - Copy/esp-idf/components/partition_table/check_sizes.py" --offset 0x8000 bootloader 0x1000 D:/ESP32-Code/esp-now-audio-source/build/bootloader/bootloader.bin"
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/audio/source_audio.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/audio/source_audio.c.obj 
ccache C:\Users\ngocv\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DLC3_PLUS=0 -DLC3_PLUS_HR=0 -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESP32-Code/esp-now-audio-source/build/config -ID:/ESP32-Code/esp-now-audio-source/main -I"D:/Bluetooth Project - Copy/esp-idf/components/newlib/platform_include" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/config/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/config/include/freertos" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/config/xtensa/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/FreeRTOS-Kernel/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos" -I"D:/Bluetooth Project - Copy/esp-idf/components/freertos/esp_additions/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/include/soc" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/include/soc/esp32" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/dma/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/ldo/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/debug_probe/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/mspi_timing_tuning/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/power_supply/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/port/esp32/." -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_hw_support/port/esp32/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/heap/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/heap/tlsf" -I"D:/Bluetooth Project - Copy/esp-idf/components/log/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/soc/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/soc/esp32" -I"D:/Bluetooth Project - Copy/esp-idf/components/soc/esp32/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/soc/esp32/register" -I"D:/Bluetooth Project - Copy/esp-idf/components/hal/platform_port/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/hal/esp32/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/hal/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_rom/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_rom/esp32/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_rom/esp32/include/esp32" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_rom/esp32" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_common/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_system/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_system/port/soc" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_system/port/include/private" -I"D:/Bluetooth Project - Copy/esp-idf/components/xtensa/esp32/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/xtensa/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/xtensa/deprecated_include" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/include/apps" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/include/apps/sntp" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/lwip/src/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/port/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/port/freertos/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/port/esp32xx/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/port/esp32xx/include/arch" -I"D:/Bluetooth Project - Copy/esp-idf/components/lwip/port/esp32xx/include/sys" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_wifi/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_wifi/include/local" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_wifi/wifi_apps/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_wifi/wifi_apps/nan_app/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_event/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_phy/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_phy/esp32/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_netif/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_timer/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/nvs_flash/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_partition/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/esp_http_server/include" -I"D:/Bluetooth Project - Copy/esp-idf/components/http_parser" -ID:/ESP32-Code/esp-now-audio-source/components/liblc3/include -ID:/ESP32-Code/esp-now-audio-source/components/liblc3/src -ID:/ESP32-Code/esp-now-audio-source/components/minimp3/include -I"D:/Bluetooth Project - Copy/esp-idf/components/spi_flash/include" -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/ESP32-Code/esp-now-audio-source=. "-fmacro-prefix-map=D:/Bluetooth Project - Copy/esp-idf=/IDF" -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/audio/source_audio.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\audio\source_audio.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/audio/source_audio.c.obj -c D:/ESP32-Code/esp-now-audio-source/main/audio/source_audio.c
D:/ESP32-Code/esp-now-audio-source/main/audio/source_audio.c: In function 'espnow_rate_name':
D:/ESP32-Code/esp-now-audio-source/main/audio/source_audio.c:19:9: error: duplicate case value
   19 |         case WIFI_PHY_RATE_54M: return "54M";
      |         ^~~~
D:/ESP32-Code/esp-now-audio-source/main/audio/source_audio.c:18:9: note: previously used here
   18 |         case WIFI_PHY_RATE_24M: return "24M";
      |         ^~~~
[5/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/core/source_core.c.obj
[6/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/source_app.c.obj
[7/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi/source_wifi.c.obj
ninja: build stopped: subcommand failed.
